# Data-Aggregation-Grouping-reshaping-Analysiss

./: README.md  outputfile.ipynb  pyproject.toml
Dataset/: Customer_Segmentation.csv
src/datagrouping/: datasummary.py  eda.py  inference.py  introduction.py  regression.py
