[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Data-Aggregation-Grouping-reshaping-Analysiss"
version = "0.1.1"
description = "DataAgregation- Grouping- Eda project - Introduction, Data Summary, Eda, inference "
authors = [{name = "Ashish Rogannagari", email = "125127793+AshishRogannagari@users.noreply.github.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10.4"

[project.urls]
homepage = "https://github.com/AshishRogannagari"
repository = "https://github.com/AshishRogannagari/Data-Aggregation-Grouping-reshaping-Analysiss"
documentation = "https://github.com/AshishRogannagari/Data-Aggregation-Grouping-reshaping-Analysiss/blob/main/README.md"

[tool.poetry.dependencies]
python = ">=3.10.4"
requests = "2.31.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
wordcloud = "^1.9.2"





