[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Data-Aggregation-Grouping-reshaping-Analysiss"
version = "0.1.2"
description = "Data Aggregation Grouping Reshaping Analysis"
authors = [{name = "Ashish Rogannagari", email = "125127793+AshishRogannagari@users.noreply.github.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10.4"

[project.dependencies]
python = ">=3.10.4"
requests = "2.31.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
wordcloud = "^1.10.0"
scikit-learn = "^1.0.2"

[project.urls]
homepage = "https://github.com/AshishRogannagari"
repository = "https://github.com/AshishRogannagari/Data-Aggregation-Grouping-reshaping-Analysiss"
documentation = "https://github.com/AshishRogannagari/Data-Aggregation-Grouping-reshaping-Analysiss/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]




